Beta 1.8.2.2529.2 -Fixed Anvil Interface not rendering the edit box